refactor: rename GetUserTickets to GetOrdersByUser
